crates/cctui-tui/src/snapshots/cctui__view_snapshots__account_switch_picker_while_loading.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 2056
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2  3  4  6  8   starred · live · dispatched  sort: activity ↓  group: status
   ▾ Needs input (1)
▸    ● [claude-code] infra (main)  opus  0s  $1.25
   ▾ W┌ Switch account ──────────────────────────────────────────────────────────────────────┐
     ●│loading…                                                                              │
     ▾│                                                                                      │
      │                                                                                      │
   ▾ C│                                                                                      │
     ○│                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │ ↑↓ Pick  Enter Switch  Esc Cancel                                                    │
      └──────────────────────────────────────────────────────────────────────────────────────┘



 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
