crates/cctui-tui/src/snapshots/cctui__view_snapshots__accounts_redirect_picker.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 2540
expression: render_screen(&mut app)
---
 Accounts  2/3 poolable  ! 1 need input — Ctrl+g  anthropic 91%
    NAME                  PROVIDERS     POOL          USAGE
▸ ● alice@max             anthropic     pool:default  5h 91%
  ○ bob@max               anthropic     pool:default  -        w0.50 → alice@max
  ● op┌ Redirect alice@max's launches to ────────────────────────────────────────────────────┐
      │❯ anthropic bob@max                                                                   │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
      │                                                                                      │
 Pools│                                                                                      │
▸  def│                                                                                      │
     1│ Enter redirect  Esc cancel                                                           │
     2└──────────────────────────────────────────────────────────────────────────────────────┘
   codex  headroom  1 members
     1. ops-codex

 j/k:move  Enter:detail  e:poolable  +/-:weight  R:reset  x:redirect  Tab:pools
