crates/cctui-tui/src/snapshots/cctui__view_snapshots__accounts_reset_confirm_names_the_credit.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 2532
expression: render_screen(&mut app)
---
 Accounts  2/3 poolable  ! 1 need input — Ctrl+g  anthropic 100%
    NAME                  PROVIDERS     POOL          USAGE
▸ ● alice@max             anthropic     pool:default  5h 100%
  ○ bob@max               anthropic     pool:default  -        w0.50 → alice@max
  ● ops-codex             openai        pool:codex    -




                  ┌ Claim a reset ───────────────────────────────────────────────┐
                  │ Spend a usage-limit reset on alice@max?                      │
                  │                                                              │
                  │ credit: Full reset (Weekly + 5 hr)                           │
                  └──────────────────────────────────────────────────────────────┘


 Pools  2
▸  default  ordered  failover  2 members
     1. alice@max
     2. bob@max
   codex  headroom  1 members
     1. ops-codex

 j/k:move  Enter:detail  e:poolable  +/-:weight  R:reset  x:redirect  Tab:pools
