crates/cctui-tui/src/snapshots/cctui__view_snapshots__accounts_when_the_key_may_not_list_them.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 2521
expression: render_screen(&mut app)
---
 Accounts  0/0 poolable  ! 1 need input — Ctrl+g
    NAME                  PROVIDERS     POOL          USAGE
 this key may not list accounts













 Pools  0
 this key may not list accounts





 j/k:move  Enter:detail  e:poolable  +/-:weight  R:reset  x:redirect  Tab:pools
